1. 添加缓存 2. 优化解析架构 3. 优化核心模块